--- a/Views/search.html
+++ b/Views/search.html
@@ -66,5 +66,12 @@
             <button id="searchButton" type="button" class="btn btn-dark">Search</button>
         </div>
     </div>
+    <footer class="panel-footer">
+        <div class="container">
+        <div class="text-center"></div>
+        <div class="text-center footer-contact">&phone; : 01745312567 or chaperone@guides.com</div>
+        <div class="text-center">&copy; Copyright Chaperone 2020</div>
+        </div>
+      </footer>
 </body>
 </html>
