--- a/Styles/Search.css
+++ b/Styles/Search.css
@@ -78,3 +78,35 @@ line-height: .75;
     right: 0;
     color: white;
 }
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;  
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.flex-container > div {
+    background-color: #212f3d;
+    width: auto;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+   
+}
+.flex-container > div:hover {
+    box-shadow: 1px 10px 15px 3px #3498DB ;
+    transition-duration: .4s;
+}
+
+#guide-name{
+    font-size: 1.2em;
+    margin: 0;
+}
+#guide-loc{
+    font-size: .8em;
+    margin: 0;
+}
