fixed footer overlapping issue

--- a/Views/search.html
+++ b/Views/search.html
@@ -22,6 +22,7 @@
        </nav>
     </header>
     <div id="main-content" class="container">
+      
         <div id="searchString" class="container">
             <div class="input-group">
                 <div class="input-group-prepend">
@@ -67,12 +68,16 @@
         <div id="search-btn" class="container">
             <button id="searchButton" type="button" class="btn btn-dark">Search</button>
         </div>
-        <div id="msg" class="flex-container">
-          <!-- Resutls are loaded here -->
-        </div>
+        
+        <h3 id="resultLable" class="text-center"></h3>
+        <div id="line"></div>
         <div>
           <span id="errMsg"></span>
         </div>
+        <div id="msg" class="flex-container">
+          <!-- Resutls are loaded here -->
+        </div>
+        
     </div>
     <footer class="panel-footer">
         <div class="container">
