--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -5,7 +5,7 @@
     background-color: #222;
     border-top: 0;
     font-size:.8em;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
