--- a/Styles/header.css
+++ b/Styles/header.css
@@ -8,6 +8,7 @@ body{
 background-color: #212f3d ;
 border-radius: 0;
 border: 0;
+margin-bottom: 20px;
 }
 .navbar-brand h1{
 font-family: 'Oswald', sans-serif; 
@@ -20,4 +21,9 @@ margin-bottom: 0;
 padding-top: 5px;
 padding-bottom: 5px;
 line-height: .75;
+}
+
+#GuideForm{
+    margin-bottom: 10%;
+    width: 80%;
 }
