--- a/Views/GuideViews/index.html
+++ b/Views/GuideViews/index.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../Styles/GuideStyles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
     <script src="../../Scripts/jquery-3.5.1.js"></script>
     <script src="../../Scripts/GuideScripts/index.js"></script>
-    <title>Chaperone Guide Index</title>
+    <title></title>
 </head>
 <body>
-    <h1>Guides Here</h1>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Chaperone</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Requests</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Edit Profile</a>
+                </li>
+              </ul>
+              <button type="button" id="logOut" class="btn btn-danger">Log Out</button>
+            </div>
+          </nav>
+     </header>
+     <h3 id="WelcomeLable"></h3>
+     <hr>
+     <div id="main-content" class="container">
+         <h3 id="Lable">Request(s):</h3><hr>
+        <div id="requests">
+
+        </div>
+        <h3 id="Lable">Edit Profile:</h3><hr>
+     </div>
 </body>
 </html>
