update guide index
req(s) can be seen

--- a/Views/GuideViews/index.html
+++ b/Views/GuideViews/index.html
@@ -21,10 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Requests</a>
+                  <a class="nav-link" href="#requests">Requests</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Edit Profile</a>
+                  <a class="nav-link" href="#GuideForm">Edit Profile</a>
                 </li>
               </ul>
               <button type="button" id="logOut" class="btn btn-danger">Log Out</button>
@@ -36,7 +36,12 @@
      <div id="main-content" class="container">
          <h3 id="Lable">Request(s):</h3><hr>
         <div id="requests">
-
+          <table id="reqTable" class="table table-dark">
+            <thead id="reqTableHead">
+              
+            </thead>
+            <tbody id="reqTableBody"></tbody>
+          </table><hr>
         </div>
         <h3 id="Lable">Edit Profile:</h3><hr>
         <div id="GuideForm" class="container">
