--- a/Styles/TouristStyles/TouristIndex.css
+++ b/Styles/TouristStyles/TouristIndex.css
@@ -89,8 +89,7 @@ margin-left: 50px;
     width: auto;
     margin: 10px;
     text-align: center;
-    line-height: 75px;
-    font-size: 30px;
+    font-size: 1.5em;
     color: white;
     padding: 15px;
     border-radius: 10px;
