--- a/Views/TouristViews/TouristIndex.html
+++ b/Views/TouristViews/TouristIndex.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#requests">Requests</a>
+                  <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristRequestView.html">Requests</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#GuideForm">Edit Profile</a>
@@ -76,6 +76,16 @@
                 <label class="form-check-label" for="FemaleCheck">Female</label>
               </div>
         </div>
+        <form>
+            <div class="row">
+              <div class="col">
+                <input type="text" id="startDate" class="form-control" placeholder="Start Date : yyyy,mm,dd">
+              </div>
+              <div class="col">
+                <input type="text" id="endDate" class="form-control" placeholder="End Date : yyyy,mm,dd"">
+              </div>
+            </div>
+          </form>
         <div id="search-btn" class="container">
             <button id="searchButton" type="button" class="btn btn-dark">Search</button>
         </div>
@@ -90,9 +100,7 @@
         </div>
         <h3 id="resultLable" class="text-center"></h3>
         <div id="line"></div>
-        <div id="msg" class="flex-container">
-            <!-- Resutls are loaded here -->
-          </div>
+        
     </div>
 </body>
 </html>
