--- a/Views/TouristViews/TouristIndex.html
+++ b/Views/TouristViews/TouristIndex.html
@@ -21,10 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristIndex.html">Home</a>
+                  </li>
+                <li class="nav-item">
                   <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristRequestView.html">Requests</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#GuideForm">Edit Profile</a>
+                  <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristEditProfileView.html">Edit Profile</a>
                 </li>
               </ul>
               <button type="button" id="logOut" class="btn btn-danger">Log Out</button>
