--- a/Views/TouristViews/TouristRequestView.html
+++ b/Views/TouristViews/TouristRequestView.html
@@ -20,11 +20,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristIndex.html">Home</a>
+                </li>
                 <li class="nav-item" active>
                   <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristRequestView.html">Requests</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#GuideForm">Edit Profile</a>
+                  <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristEditProfileView.html">Edit Profile</a>
                 </li>
               </ul>
               <button type="button" id="logOut" class="btn btn-danger">Log Out</button>
