--- a/Views/AdminViews/AdminIndex.html
+++ b/Views/AdminViews/AdminIndex.html
@@ -14,6 +14,7 @@
     <script src="../../Scripts/jquery-3.5.1.js"></script>
     <script src="../../Scripts/AdminScripts/adminIndex.js"></script>
     <script src="../../Scripts/AdminScripts/adminGenderRatio.js"></script>
+    <script src="../../Scripts/AdminScripts/adminUserRatio.js"></script>
 </head>
 <body>
     <header>
@@ -47,6 +48,16 @@
           </div>
           <div class="chart-wrapper">
             <canvas id="myChart"></canvas>
+          </div>
+        </div>
+      </div><hr>
+      <div class="wrapper">
+        <div class="container d-flex flex-column justify-content-center align-items-center">
+          <div class="title text-center mb-5">
+            <h1 id="Lable">User Ratio:</h1>
+          </div>
+          <div class="chart-wrapper">
+            <canvas id="userChart"></canvas>
           </div>
         </div>
       </div>
