--- a/Views/TouristViews/GuideDetailsView.html
+++ b/Views/TouristViews/GuideDetailsView.html
@@ -12,25 +12,28 @@
 
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Chaperone</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#requests">Requests</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#GuideForm">Edit Profile</a>
-                </li>
-              </ul>
-              <button type="button" id="logOut" class="btn btn-danger">Log Out</button>
-            </div>
-          </nav>
-     </header>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Chaperone</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristIndex.html">Home</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristRequestView.html">Requests</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost/ChaperoneFront/Views/TouristViews/TouristEditProfileView.html">Edit Profile</a>
+            </li>
+          </ul>
+          <button type="button" id="logOut" class="btn btn-danger">Log Out</button>
+        </div>
+      </nav>
+ </header>
      <div id="main-content" class="container">
         <h3 id="WelcomeLable" class="text-center">Guide Profile:</h3><hr>
         <div id="info" class="container">
