--- a/Styles/Search.css
+++ b/Styles/Search.css
@@ -8,18 +8,23 @@ body{
 background-color: #212f3d ;
 border-radius: 0;
 border: 0;
+margin-bottom: 20px;
 }
-.navbar-brand h1{
+.navbar-brand{
 font-family: 'Oswald', sans-serif; 
 color: #dadfe3;
-font-size:2.5em;
+font-size:3em;
 font-weight: bold;
 text-shadow: 1px 1px 1px #222;
 margin-top:0;
-margin-bottom: 0;
+margin-bottom: 10px;
 padding-top: 5px;
 padding-bottom: 5px;
 line-height: .75;
+margin-left: 50px;
+}
+#navbarNav{
+    margin-left: 45%;
 }
 .input-group{
     margin-top: 150px;
