--- a/Views/search.html
+++ b/Views/search.html
@@ -12,15 +12,27 @@
     <title>Search</title>
 </head>
 <body>
-    <header>
-       <nav id="header-nav" class="navbar navbar-default">
-           <div class="container">
-                <div class="navbar-brand">
-                    <a href=""><h1>Chaperone</h1></a>
-                </div>
-           </div>
-       </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Chaperone</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost/ChaperoneFront/Views/CreateTourist.html">Sign Up</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost/ChaperoneFront/Views/CreateGuide.html">Become A Guide</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost/ChaperoneFront/Views/logIn.html">Log In</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+ </header>
     <div id="main-content" class="container">
       
         <div id="searchString" class="container">
