--- a/Views/logIn.html
+++ b/Views/logIn.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="../Styles/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
     <script src="../Scripts/jquery-3.5.1.js"></script>
@@ -15,20 +16,18 @@
        <!-- Header is loaded here using jquery -->
    </div>
    <div id="main-content" class="container">
-       <div class="container">
+       <div id="loginDiv" class="container">
+         <a href="http://localhost/ChaperoneFront/">Chaperone</a>
         <form>
-            <div class="form-group">
-              <label for="loginEmail">Email address</label>
-              <input type="text" class="form-control" id="loginEmail" aria-describedby="emailHelp">
+            <div class="form-group">              
+              <input type="text" class="form-control" id="loginEmail" placeholder="Email"aria-describedby="emailHelp">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
-            <div class="form-group">
-              <label for="loginPass">Password</label>
-              <input type="password" class="form-control" id="loginPass">
+            <div class="form-group">    
+              <input type="password" placeholder="Password" class="form-control" id="loginPass">
             </div>
             <button type="button" id="logIn-btn" class="btn btn-primary">Log In</button>
           </form>
-          <h2 id="loginMsg">S</h2>
        </div>
    </div>
    <div id="footer">
